exports[`<Sidebar /> renders children correctly 1`] = `
<aside
  className="iffIjZ">
  <section
    className="hZXMYD"
    name="sidebar-wrapper">
    <span
      collapse={false}>
      Child
    </span>
  </section>
</aside>
`;

exports[`<Sidebar /> renders correctly with collapsed option 1`] = `
<aside
  className="exxUGL">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with default options 1`] = `
<aside
  className="iffIjZ">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed and collapsed options 1`] = `
<aside
  className="fyYIrU">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed option 1`] = `
<aside
  className="bFpYML">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and collapsed options 1`] = `
<aside
  className="bzhyYV">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and fixed options 1`] = `
<aside
  className="bFpYML">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini option 1`] = `
<aside
  className="iffIjZ">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini, fixed, and collapsed options 1`] = `
<aside
  className="jxpJDq">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with theme 1`] = `
<aside
  className="kdRzQx">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;
